objects/Learning__c.object
<CustomObject>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Date the course was completed</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Associates contact record link to the user record that matches the user from success factor for the learning history</description>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Learnings</relationshipLabel>
        <relationshipName>Learnings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Learning_Mode__c</fullName>
        <description>Mode of learning for the user</description>
        <label>Learning Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classroom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the course</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Course Title</description>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of exam</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Exam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is a hidden field. Concatenation of userId+ItemId perform from SOA and is just passed on to salesforce</description>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Learning</label>
    <nameField>
        <label>Learning Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learnings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>